# aura-effects

./: .gitignore  AGENTS.md  README.md  code.py  performance.py  pyproject.toml
effects/: __init__.py  effect.py  level.py  palette.py  performance.py  render.py  shape.py  value.py
effects/elements/: __init__.py  air.py  dark.py  earth.py  fire.py  gravity.py  ice.py  light.py  lightning.py  registry.py  time.py  water.py
effects/steps/: __init__.py  control.py  drift_noise.py  duration.py  flame.py  position.py  scale.py  sparkle.py
examples/: circuitpython_showcase.py  custom_effect.py  custom_step.py  direction_aware.py  dynamic_values.py  element_levels.py  multiple_states.py  step_sequencing.py  using_renderers.py
tests/: conftest.py  test_duration_step.py  test_effect.py  test_effect_state.py  test_level.py  test_palette.py  test_render.py  test_shape.py  test_smoke.py  test_timer.py  test_value.py
tests/steps/: test_accelerate_step.py  test_call_step.py  test_drift_noise_step.py  test_duration_step.py  test_face_forward_step.py  test_flame_step.py  test_hide_step.py  test_multiplier_step.py  test_rotate_step.py  test_set_position_step.py  test_sparkle_step.py
