[project]
name = "aura-effects"
version = "0.1.0"
description = "Effects library to animate spells on RGB LED strips"
readme = "README.md"
authors = [
    { name = "Aaron Silinskas", email = "aaron@mindwidgets.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "effects"
module-root = ""

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
