[project]
name = "aura-effects"
version = "0.1.0"
description = "Effects library to animate spells on RGB LED strips"
readme = "README.md"
authors = [
    { name = "Aaron Silinskas", email = "aaron@mindwidgets.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "effects"
module-root = ""

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:debugging"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "N",   # pep8-naming conventions
    "UP",  # pyupgrade (modernise syntax)
    "B",   # flake8-bugbear (likely bugs and design issues)
    "C4",  # flake8-comprehensions (cleaner list/dict/set expressions)
    "SIM", # flake8-simplify (redundant code patterns)
    "RUF", # ruff-native rules
]
ignore = [
    "N817",   # VG is an established abbreviation for ValueGenerator throughout the codebase
    "RUF002", # mathematical symbols (×, –) in docstrings are intentional
    "RUF003", # mathematical symbols (×, –) in comments are intentional
    "SIM105", # try/except/pass is clearer than contextlib.suppress for CircuitPython compat blocks
]
